# qubofs

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  external_cohorts_2024.md  manuscript_bioinformatics.docx  manuscript_bioinformatics.md  pyproject.toml  requirements-dev.txt  requirements.txt  slides_5main_en.html  slides_5main_jp.html  slides_supplementary_jp.html
data_release/: README.md  bcell_signature_recovery.csv  bootstrap_ci.csv  highcorr_pairs_per_panel.csv  metrics_cross_cohort.csv  metrics_per_cohort.csv  panel_size_sweep.csv  pbmc_pooled_redundancy.csv  pbmc_pooled_table1.csv  permutation_tests.csv  selected_genes.csv  solver_sensitivity.csv  threshold_sensitivity.csv  within_panel_redundancy_perpanel.csv  within_panel_redundancy_summary.csv
docs/: DWAVE_SETUP.md  PROVENANCE.md  R_dependencies.md  data_sources.md  method_details.md  reproduction.md
examples/: quickstart.py
examples/toy_data/: toy_metadata.csv  toy_pseudobulk_B.csv  toy_pseudobulk_Mono.csv
qubo_run_v6/: Discussion_section.md  MIL_design.md  Methods_section.md  background_slide.html  background_slide_en.html  conclusion_slide.html  conclusion_slide_en.html  csf_vs_pbmc_summary.csv  data_preparation_flow.html  literature_overlap_results.csv  ms_curated_enrichment_results.csv  narration_en.md  narration_en_4main.md  narration_en_5main.md  narration_en_slides_3_6.md  narration_jp.md  narration_jp_4main.md  narration_jp_5main.md  narration_jp_slides_3_6.md  qubo_explainer_slide.html  qubo_explainer_slide_en.html  qubo_mi_ablation_jaccard.csv  qubo_mi_ablation_summary.csv  qubo_mi_ablation_summary.txt  qubo_tabu_validation.csv  qubo_tabu_validation_summary.txt  results_slides.html  results_slides_en.html  slides_4main_en.html  slides_4main_jp.html  slides_5slide_en.html  slides_5slide_jp.html  slides_supplementary_en.html  sweep_all_methods_K_summary.csv  sweep_de_top_K_summary.csv  sweep_inner_cv_AUC_by_K.csv  sweep_qubo_K_heldout_summary.csv  v6consensus_summary_cross_cohort.csv  v6consensus_summary_per_holdout.csv  v6entrue_summary_cross_cohort.csv  (+7 more)
scripts/: README.md  README_aucell.md  aggregate_csf_vs_pbmc.py  aggregate_selected_genes.py  aggregate_v6consensus.py  aggregate_v6entrue.py  aggregate_v6tier12.py  aggregate_v9.py  analyze_selected_genes.py  audit_l3_subtypes.R  build_manuscript_docx.py  combine_v5_results.py  export_qubo_panels_for_aucell.py  extend_DEG_methods.R  extract_holdout_Heming.R  extract_holdout_Ramesh.R  extract_pseudobulk_v5_compartment.R  extract_pseudobulk_v7_l3.R  extract_pseudobulk_v8_mixed.R  extract_pseudobulk_v9_mixed.R  fix_v7_csv_headers.py  literature_overlap_analysis.py  make_aucell_figure.py  make_canonical_figures.py  make_gene_figures.py  make_report.py  make_report_v5.py  ms_curated_enrichment.py  qubo_dwave_validation.py  qubo_mi_redundancy_ablation.py  qubo_pipeline.py  qubo_pipeline_v5.py  qubo_pipeline_v6.py  qubo_tabu_validation.py  qubo_utils_v5.py  reproduce.sh  reproduce_from_release.sh  run_GO_enrichment.R  run_K_sweep.sh  run_aucell_analysis.R  (+23 more)
scripts/01_pipeline/: 00_annotate_compartment.R  README.md  extract_holdout_Heming.R  extract_holdout_Ramesh.R  extract_pseudobulk.R
scripts/02_deg/: README.md  extend_DEG_methods.R
scripts/03_selection/: README.md  qubo_pipeline.py  qubo_utils.py  run_pipeline.py
scripts/04_aggregation/: README.md  aggregate_metrics.py  bootstrap_stats.py  build_table1.py  highcorr_pairs_per_panel.py  solver_sensitivity.py  sweep_collect.py  within_panel_redundancy.py
src/qubofs/: __init__.py  cli.py  filter.py  metrics.py  pipeline.py  qubo.py  relevance.py
src/qubofs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_filter.py  test_metrics_and_pipeline.py  test_qubo.py  test_relevance.py
